...
            android:id="@+id/action_journalFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>


    <fragment
        android:id="@+id/selfAwareFragment"
        android:name="com.example.mindlog.features.selfaware.presentation.SelfAwareFragment"
        android:label="fragment_self_aware"
        tools:layout="@layout/fragment_self_aware">

        <!-- Optional: You can define an action from selfAwareFragment to selfAwareHistoryFragment -->
        <action
            android:id="@+id/action_selfAwareFragment_to_selfAwareHistoryFragment"
            app:destination="@id/selfAwareHistoryFragment" />
    </fragment>

    <!-- This is the missing destination you need to add -->
    <fragment
        android:id="@+id/selfAwareHistoryFragment"
        android:name="com.example.mindlog.features.selfaware.presentation.SelfAwareHistoryFragment"
...
